Updated css images and links

--- a/src/Videorow.css
+++ b/src/Videorow.css
@@ -1,31 +1,37 @@
-.videorow{
+.videorow {
     display: flex;
     margin-bottom: 30px;
     max-width: 700px;
 }
-.videorow >img{
-    object-fit: contain;
-    width:246px;
-    height:138px;
+
+.videorow img {
+    object-fit: fill;
+    width: 150px;
+    height: 150px;
 }
-.video-text{
+
+.video-text {
     margin-left: 14px;
 }
-.video-description{
+
+.video-description {
     margin-top: 20px;
     font-size: 12px;
-    color:#606060
+    color: #606060
 }
-.video-headline{
+
+.video-headline {
     font-size: 12px;
-    color:gray;
+    color: gray;
 }
-.video-subs{
-    color:rgb(84,157,211);
+
+.video-subs {
+    color: rgb(84, 157, 211);
     font-weight: bolder;
 
 }
-.subs{
+
+.subs {
     background-color: lightgray;
     padding: 2px;
 }
