--- a/src/header.css
+++ b/src/header.css
@@ -1,41 +1,52 @@
-.header{
-    display:flex;
+.header {
+    display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding:20px;
+    padding: 20px;
     position: sticky;
-    top:0;
+    top: 0;
     z-index: 100;
     background-color: white;
 }
-.header-logo{
-    height:25px;
+
+.header-left {
+    height: 30px;
     object-fit: contain;
     margin-left: 20px;
-
 }
-.header-input{
+
+.header-logo {
+    height: 30px;
+    object-fit: contain;
+    margin-left: 20px;
+}
+
+.header-input {
     display: flex;
     align-items: center;
-    width:40%;
+    width: 40%;
     border: 1px solid black;
 
 }
-.header-input-button{
+
+.header-input-button {
     width: 50px !important;
     background-color: #fafafa;
     border-left: 1px solid lightgray;
     color: gray;
 }
 
-.header-icons{
+.header-icons {
     display: flex;
     align-items: center;
 }
-.header-input > input{
+
+.header-input>input {
     flex: 1;
-    border:none;
+    border: none;
 }
-.header-icon{
+
+.header-icon {
     margin-right: 5px;
 }
